<resources>
    <string name="app_name">Hotel Managment System</string>
    <string name="login_text">Login</string>
    <string name="login_signupText">Don\'t have an account? Signup</string>
    <string name="login_emailAddressText">Email Address:</string>
    <string name="login_rememberLoginText">Remember Login</string>
    <string name="reservedList_noReservedRooms">You Haven\'t Reserved Any Rooms Yet.</string>
    <string name="reservedList_card_roomNumberText">Room Number</string>
    <string name="reservedList_card_statusText">Status</string>
    <string name="reservedList_card_roomNumberValueText">value</string>
    <string name="reservedList_card_statusValueText">value</string>
    <string name="reservedRoomInfo_CheckInValueText">Check In</string>
    <string name="reservedRoomInfo_RequestServiceText">Request Service</string>
    <string name="servicesList_NameValueText">value</string>
    <string name="servicesList_priceValueText">value</string>
    <string name="servicesList_requestButtonText">Request</string>
    <string name="receptionestHomePage_manageServicesText">Manage Requested Services</string>
    <string name="receptionestHomePage_welcomeText">Welcome </string>
    <string name="receptionestHomePage_logoutText">Logout</string>
    <string name="receptionestManageRequests_noRequestsText">No Requested Services</string>
    <string name="receptionestManageRequests_rIdValuetext">value</string>
    <string name="receptionestManageRequests_serviceValuetext">value</string>
    <string name="receptionestManageRequests_completeButtonText">Complete</string>
    <string name="changePassword_changeText">Change</string>
    <string name="receptionist_menu_changepassword_text">Change Password</string>
    <string name="receptionist_menu_logout_text">Logout</string>
    <string-array name="changed">
        <item>Changed For Receptionist</item>
        <item>Changed For Rooms</item>
        <item>Changed For Services</item>
    </string-array>
</resources>